{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 115,
  "lineage": "3bfccb83-ba7c-9733-229c-580246e12aae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:203574833499:instance/i-0c8e4c430672d72f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8e4c430672d72f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d5e92d2ed49e7413"
              }
            ],
            "primary_network_interface_id": "eni-0d5e92d2ed49e7413",
            "private_dns": "ip-172-31-1-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.203",
            "public_dns": "ec2-44-200-154-50.compute-1.amazonaws.com",
            "public_ip": "44.200.154.50",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e95a646568116cad",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "devops-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c470c27762716f2",
            "tags": {
              "Name": "devops-instance",
              "Project": "devops"
            },
            "tags_all": {
              "Name": "devops-instance",
              "Project": "devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2b8e0902117342a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203574833499",
            "id": "i-0c8e4c430672d72f9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.devops-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203574833499:security-group/sg-0d2b8e0902117342a",
            "description": "Security group for devops instance",
            "egress": [],
            "id": "sg-0d2b8e0902117342a",
            "ingress": [],
            "name": "devops-sg",
            "name_prefix": "",
            "owner_id": "203574833499",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-sg"
            },
            "tags_all": {
              "Name": "devops-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c12fce806c10dd2c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203574833499",
            "id": "sg-0d2b8e0902117342a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203574833499:security-group-rule/sgr-06de70c6fde013003",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06de70c6fde013003",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d2b8e0902117342a",
            "security_group_rule_id": "sgr-06de70c6fde013003",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203574833499",
            "id": "sgr-06de70c6fde013003",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.devops-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allowoOutBoundIPV4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203574833499:security-group-rule/sgr-0ea911acbaa7e1da6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ea911acbaa7e1da6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d2b8e0902117342a",
            "security_group_rule_id": "sgr-0ea911acbaa7e1da6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203574833499",
            "id": "sgr-0ea911acbaa7e1da6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.devops-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allowoOutBoundIPV6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203574833499:security-group-rule/sgr-067db49b67e62ae43",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-067db49b67e62ae43",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d2b8e0902117342a",
            "security_group_rule_id": "sgr-067db49b67e62ae43",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203574833499",
            "id": "sgr-067db49b67e62ae43",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.devops-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sshfrommyIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203574833499:security-group-rule/sgr-0a85fbfcc9b3a3b44",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a85fbfcc9b3a3b44",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d2b8e0902117342a",
            "security_group_rule_id": "sgr-0a85fbfcc9b3a3b44",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203574833499",
            "id": "sgr-0a85fbfcc9b3a3b44",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.devops-sg"
          ]
        }
      ]
    }
  ]
}